--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_aws_s3service
-description: "A new Flutter plugin project allows users to upload 、download 、list、 delete image for amazon s3"
+description: "flutter_aws_s3service plugin allows users to upload 、download 、list、 delete image for amazon s3"
 version: 0.0.1
 homepage: https://github.com/larackg/flutter_aws_s3service
 
