--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.8
-  path: ^1.9.0
-  path_provider: ^2.1.5
+#  plugin_platform_interface: ^2.0.2
+#  path: ^1.8.0
+#  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+#  flutter_lints: ^5.0.0
 
 flutter:
   plugin:
