--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: flutter_aws_s3service
 description: "flutter_aws_s3service plugin allows users to upload 、download 、list、 delete image for amazon s3"
 version: 0.0.2
 homepage: https://github.com/larackg/flutter_aws_s3service
+publish_to: https://pub.dev
 
 environment:
   sdk: ">=3.5.4 <4.0.0"
